--- a/tests/test.cfg
+++ b/tests/test.cfg
@@ -2,7 +2,7 @@
 [ispyb_mysql_sp]
 user = ispyb
 pw = integration
-host = localhost
+host = 192.168.33.10
 port = 3306
 db = ispyb
 conn_inactivity = 360
