--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,16 @@ cryptography==2.3.1
 enum-compat==0.0.2
 enum34==1.1.6
 Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
 idna==2.7
 ipaddress==1.0.22
 ispyb==4.10.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mysql-connector==2.1.6
 pycparser==2.18
 PyMySQL==0.9.2
 six==1.11.0
+SQLAlchemy==1.2.11
 Werkzeug==0.14.1
