--- a/tests/test.cfg
+++ b/tests/test.cfg
@@ -1,5 +1,5 @@
 # Copy this to config.cfg and modify it for your environment
-[ispyb_mysql_sp]
+[ispyb_dev]
 user = ispyb
 pw = integration
 host = 192.168.33.10
