--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-asn1crypto==0.24.0
-cffi==1.11.5
-click==6.7
-cryptography==2.3.1
-enum-compat==0.0.2
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
 enum34==1.1.6
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 idna==2.7
-ipaddress==1.0.22
-ispyb==4.10.0
-itsdangerous==0.24
+inflect==1.0.1
+ItsDangerous==1.0.0
 Jinja2==2.10
 MarkupSafe==1.0
 mysql-connector==2.1.6
-pycparser==2.18
-PyMySQL==0.9.2
-requests==2.19.1
-six==1.11.0
-SQLAlchemy==1.2.11
+requests==2.20.0
+sqlacodegen==1.1.6
+SQLAlchemy==1.2.12
+urllib3==1.24
 Werkzeug==0.14.1
