--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.7.5",
     "core-js": "^2.6.5",
     "howler": "^2.1.2",
+    "tailwindcss": "^1.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
