--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.5",
     "howler": "^2.1.2",
     "tailwindcss": "^1.1.2",
+    "typeface-cantarell": "0.0.72",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
