--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ MarkupSafe==1.0
 mysql-connector==2.1.7
 requests==2.20.0
 sqlacodegen==1.1.6
-SQLAlchemy>=1.3.0
+SQLAlchemy<1.4
 urllib3==1.24.3
 Werkzeug==0.14.1
 gunicorn==19.9.0
