--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-certifi==2018.10.15
-chardet==3.0.4
-Click==7.0
-enum34==1.1.6
-Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-idna==2.7
-inflect==1.0.1
-ItsDangerous==1.1.0
-Jinja2>=2.10.1
-MarkupSafe==1.0
-mysql-connector==2.1.7
-requests==2.20.0
-sqlacodegen==1.1.6
-SQLAlchemy<1.4
-urllib3==1.24.3
-Werkzeug==0.14.1
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
 gunicorn==19.9.0
+idna==2.10
+importlib-metadata==4.5.0
+inflect==5.3.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mysql-connector==2.2.9
+requests==2.25.1
+sqlacodegen==2.3.0
+SQLAlchemy==1.3.24
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+Werkzeug==2.0.1
+zipp==3.4.1
