--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "font-awesome": "^4.7.0",
     "howler": "^2.1.2",
     "tailwindcss": "^1.1.2",
-    "typeface-cantarell": "1.1.13",
+    "fontsource-cantarell": "4.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
