--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fontsource/cantarell": "^5.0.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "@vue/cli-service": "^3.0.4"
   }
 }
