--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
-    "@vue/cli-service": "^3.0.4"
+    "@vue/cli-service": "^3.0.4",
+    "vue-template-compiler": "^2.6.10"
   }
 }
