--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,8 @@
     "@fontsource/cantarell": "^5.0.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
+    "vuex": "^3.0.1",
     "@vue/cli-service": "^3.0.4",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
