--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "font-awesome": "^4.7.0",
     "howler": "^2.1.2",
     "tailwindcss": "^2.0.0",
-    "postcss": "^8.4.31",
+    "@tailwindcss/postcss7-compat": "^2.0.0",
     "@fontsource/cantarell": "^5.0.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
