--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
-certifi==2023.7.22
-chardet==4.0.0
+certifi==2023.11.17
+chardet==5.2.0
+click=8.1.7
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
-gunicorn==19.9.0
-idna==2.10
-importlib-metadata==4.5.0
-inflect==5.3.0
+gunicorn==21.2.0
+idna==3.6
+importlib-metadata==6.8.0
+inflect==7.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 mysql-connector==2.2.9
-requests==2.25.1
-sqlacodegen==2.3.0
+requests==2.31.0
+sqlacodegen==2.3.0.post1
 SQLAlchemy==2.0.23
 typing-extensions==4.8.0
-zipp==3.4.1
+urllib3==2.1.0
+Werkzeug==3.0.1
+zipp==3.17.0
