--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 mysql-connector==2.2.9
 requests==2.31.0
-sqlacodegen==2.3.0.post1
+sqlacodegen==2.3.0
 SQLAlchemy==2.0.23
 typing-extensions==4.8.0
 urllib3==2.1.0
