--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,8 @@
     "vuex": "^4.0.0",
     "@vue/cli-service": "^5.0.8",
     "vue-template-compiler": "^2.6.10"
+  },
+  "overrides": {
+    "postcss": "^8.0.0"
   }
 }
