--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ requests==2.32.4
 sqlacodegen==2.3.0
 SQLAlchemy==2.0.36
 typing-extensions==4.12.2
-urllib3==2.5.0
+urllib3>=2.6.0
 Werkzeug==3.1.4
 zipp==3.20.2
