--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "dev": "vue-cli-service build --mode development"
+    "preview": "vite preview",
+    "build": "vite build",
+    "dev": "vite"
   },
   "dependencies": {
     "axios": "^1.12.0",
@@ -17,8 +17,9 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.0",
+    "vite": "^5.0.0",
     "tailwindcss": "^3.4.17",
-    "@vue/cli-service": "^5.0.8",
     "postcss": "^8.0.0"
   }
 }
