--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "ispyb-logistics",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "preview": "vite preview",
     "build": "vite build",
@@ -20,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.0.0",
     "vite": "^5.0.0",
     "tailwindcss": "^3.4.17",
-    "postcss": "^8.0.0"
+    "postcss": "^8.0.0",
+    "autoprefixer": "^10.4.20"
   }
 }
